# task-manager

./: .env.example  .gitignore  .pre-commit-config.yaml  config.py  docker-compose.yml  logger.py  main.py  pyproject.toml
app/: dependencies.py  main.py  websocket_manager.py
app/core/: config.py  database.py  email.py  redis.py  security.py
app/models/: __init__.py  task.py  user.py  workspace.py
app/repositories/: base.py  comment.py  task.py  user.py  workspace.py
app/routers/: auth.py  tasks.py  users.py  websocket.py  workspaces.py
app/schemas/: __init__.py  auth.py  task.py  user.py  workspace.py
app/services/: auth.py  oauth.py  task.py  workspace.py
database/: db.py
migrations/: env.py
migrations/versions/: 2563d1ca4a76_add_workspace_members_and_invitations_.py  3626adf15ade_init_db.py  5eff37b14784_create_all_tables.py  70660e74b8cb_initial_migration_create_users_and_.py  c00bfe0a09e5_initial_schema_all_models_with_uuids.py  c38e935010fc_add_task_and_comment_models.py  e41a3d4cec54_init_fresh_db.py
models/: task.py  user.py
schemas/: task.py  user.py  workspace.py
